force-app/main/default/objects/Process_Task__c/fields/Projected_Production_Cut_Over__c.field-meta.xml
<CustomField>
    <fullName>Projected_Production_Cut_Over__c</fullName>
    <label>Projected Production Cut Over</label>
    <type>Date</type>
</CustomField>