force-app/main/default/objects/Process_Task__c/fields/Projected_UAT_Completed__c.field-meta.xml
<CustomField>
    <fullName>Projected_UAT_Completed__c</fullName>
    <label>Projected UAT Completed</label>
    <type>Date</type>
</CustomField>