force-app/main/default/objects/Process_Task__c/fields/Rebate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Type__c</fullName>
    <label>Rebate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>