force-app/main/default/objects/Process_Task__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Reference_Registration__r.Registration_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Status</label>
    <type>Text</type>
</CustomField>