force-app/main/default/objects/Process_Task__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>Related Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>