force-app/main/default/objects/Process_Task__c/fields/Related_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Type__c</fullName>
    <label>Related Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>