force-app/main/default/objects/Process_Task__c/fields/Related_Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Delivery_Contact__c</fullName>
    <formula>Delivery_Ticket__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Delivery Contact</label>
    <type>Text</type>
</CustomField>