force-app/main/default/objects/Process_Task__c/fields/Related_Delivery_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Delivery_Thread_ID__c</fullName>
    <formula>Delivery_Ticket__r.Ticket_Thread_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Delivery Thread ID</label>
    <type>Text</type>
</CustomField>