force-app/main/default/objects/Process_Task__c/fields/Related_Ticket_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Ticket_Contact_First_Name__c</fullName>
    <formula>Delivery_Ticket__r.Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Ticket Contact First Name</label>
    <type>Text</type>
</CustomField>