force-app/main/default/objects/Process_Task__c/fields/Reports_FTP_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Reports_FTP_Folder_Name__c</fullName>
    <label>Reports FTP Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>