force-app/main/default/objects/Process_Task__c/fields/Review_Period_Months_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Review_Period_Months_if_applicable__c</fullName>
    <label>Review Period (Months - if applicable)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>