force-app/main/default/objects/Process_Task__c/fields/Scheduled_Kick_off_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Kick_off_Call_Date__c</fullName>
    <label>Scheduled Kick-off Call Date</label>
    <type>Date</type>
</CustomField>