force-app/main/default/objects/Process_Task__c/fields/Select_Whether_Reports_Are_Needed__c.field-meta.xml
<CustomField>
    <fullName>Select_Whether_Reports_Are_Needed__c</fullName>
    <label>Select Whether Reports Are Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>