force-app/main/default/objects/Process_Task__c/fields/Short_Term_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>Short Term Incentive</label>
    <type>Checkbox</type>
</CustomField>