force-app/main/default/objects/Process_Task__c/fields/Short_Term_Incentive_Details__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Incentive_Details__c</fullName>
    <inlineHelpText>Please input the proposed Short Term Incentive here if you have ticked the field above.</inlineHelpText>
    <label>Short Term Incentive Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>