force-app/main/default/objects/Process_Task__c/fields/SLA_Required__c.field-meta.xml
<CustomField>
    <fullName>SLA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if an SLA record is required for this contract.</inlineHelpText>
    <label>SLA Required</label>
    <type>Checkbox</type>
</CustomField>