force-app/main/default/objects/Process_Task__c/fields/Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee__c</fullName>
    <inlineHelpText>Enter “zero” if you are waiving the Subscription Fee, otherwise enter the value to be charged.</inlineHelpText>
    <label>Subscription Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>