force-app/main/default/objects/Process_Task__c/fields/T_C_Modification_Details__c.field-meta.xml
<CustomField>
    <fullName>T_C_Modification_Details__c</fullName>
    <inlineHelpText>Please use this for other clauses that are not highlighted above, such as Virtual Terminal exemption. Please ensure that the above T&amp;C modification box is ticked to ensure that this flows through the deal approval process.</inlineHelpText>
    <label>Other T&amp;C Modifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>