force-app/main/default/objects/Process_Task__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <formula>HYPERLINK(Id, Subject__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Name</label>
    <type>Text</type>
</CustomField>