force-app/main/default/objects/Process_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <description>Same as standard &#39;Type&#39; field in standard Activities/Tasks object</description>
    <inlineHelpText>Indicate the method of contact used to complete this task</inlineHelpText>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call - Connected</fullName>
            </value>
            <value>
                <fullName>Call - Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email Task</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>