force-app/main/default/objects/Process_Task__c/fields/Technology_Fund_API_Integration__c.field-meta.xml
<CustomField>
    <fullName>Technology_Fund_API_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>Technology Fund (API Integration)</label>
    <type>Checkbox</type>
</CustomField>