force-app/main/default/objects/Process_Task__c/fields/Technology_Fund_Details__c.field-meta.xml
<CustomField>
    <fullName>Technology_Fund_Details__c</fullName>
    <inlineHelpText>Please input the proposed Technology Fund details here if you have ticked the field above.</inlineHelpText>
    <label>Technology Fund Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>