force-app/main/default/objects/Process_Task__c/fields/Tier_1_Fixed_Range_To__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Fixed_Range_To__c</fullName>
    <inlineHelpText>Please input the volume details here.</inlineHelpText>
    <label>Tier 1 Range To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>