force-app/main/default/objects/Process_Task__c/fields/Tier_3_BPS__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_BPS__c</fullName>
    <formula>Tier_3_Fixed_Share__c * 100</formula>
    <label>Tier 3 BPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>