force-app/main/default/objects/Process_Task__c/fields/Tier_3_Fixed_Share__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_Fixed_Share__c</fullName>
    <description>Tier_3_Fixed_Share__c</description>
    <inlineHelpText>Please provide this data in the following format – e.g. 20% should be added in as 0.2.</inlineHelpText>
    <label>Tier 3 Fixed % Share (BPS)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>