force-app/main/default/objects/Process_Task__c/fields/Tier_5_Interchange_Share__c.field-meta.xml
<CustomField>
    <fullName>Tier_5_Interchange_Share__c</fullName>
    <label>Tier 5 % Interchange Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>