force-app/main/default/objects/Process_Task__c/fields/Training_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_Date_and_Time__c</fullName>
    <label>Training Date and Time</label>
    <type>DateTime</type>
</CustomField>