force-app/main/default/objects/Process_Task__c/fields/Waive_Subscription_Fee_Details__c.field-meta.xml
<CustomField>
    <fullName>Waive_Subscription_Fee_Details__c</fullName>
    <inlineHelpText>If you are waiving the fee or reducing the fee, enter the terms of the waiver or discount here.</inlineHelpText>
    <label>Waive Subscription Fee Details</label>
    <length>225</length>
    <type>Text</type>
</CustomField>