force-app/main/default/objects/Process_Task__c/fields/Win_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reason__c</fullName>
    <inlineHelpText>This field must be completed when an Outcome has been selected (Won or Lost). The Task will not be able to be closed unless this field has been completed.</inlineHelpText>
    <label>Win / Loss Reason</label>
    <length>225</length>
    <type>Text</type>
</CustomField>