force-app/main/default/objects/Process_Task__c/fields/Won_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Reason__c</fullName>
    <label>Won / Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Competition</fullName>
            </value>
            <value>
                <fullName>Product / Solution</fullName>
            </value>
            <value>
                <fullName>Speed of Service</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>FX / Currency</fullName>
            </value>
            <value>
                <fullName>No response - DD</fullName>
            </value>
            <value>
                <fullName>No response - Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Stopped Using eNett</fullName>
            </value>
            <value>
                <fullName>Failed DD</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Client unresponsive/Never transacted</fullName>
            </value>
            <value>
                <fullName>Client not ready</fullName>
            </value>
            <value>
                <fullName>VANs does not meet clients needs/expectations</fullName>
            </value>
            <value>
                <fullName>No pilot customer</fullName>
            </value>
            <value>
                <fullName>Client does not want to pay API fee</fullName>
            </value>
            <value>
                <fullName>Change of Contract</fullName>
            </value>
            <value>
                <fullName>Change of Delivery Type</fullName>
            </value>
            <value>
                <fullName>High risk vs GDV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>