force-app/main/default/objects/Process_Task__c/fields/WUBS__c.field-meta.xml
<CustomField>
    <fullName>WUBS__c</fullName>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>WUBS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WUBS - No</fullName>
            </value>
            <value>
                <fullName>WUBS - Yes (eNett paying)</fullName>
            </value>
            <value>
                <fullName>WUBS - No (Client paying)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>