force-app/main/default/objects/Process_Task__c/fields/X44CS_settlement_report_email__c.field-meta.xml
<CustomField>
    <fullName>X44CS_settlement_report_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>44CA settlement report (email)</label>
    <type>Checkbox</type>
</CustomField>