force-app/main/default/objects/Process_Task__c/fields/X44F_Frequency__c.field-meta.xml
<CustomField>
    <fullName>X44F_Frequency__c</fullName>
    <label>X44F Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>