force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Chase_up_Pre_Kick_off_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Chase_up_Pre_Kick_off_Questionnaire</fullName>
    <active>true</active>
    <label>API Del Chase-up Pre Kick-off Questionnaire</label>
</RecordType>