force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Complete_Kick_off_Call_Task.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Complete_Kick_off_Call_Task</fullName>
    <active>true</active>
    <label>API Del Complete Kick-off Call Task</label>
</RecordType>