force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Confirm_Completion_All_Stages_Delivery.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Confirm_Completion_All_Stages_Delivery</fullName>
    <active>true</active>
    <label>API Del Confirm Completion All Stages Delivery</label>
</RecordType>