force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Confirm_Funding.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Confirm_Funding</fullName>
    <active>true</active>
    <label>API Del Confirm Funding</label>
</RecordType>