force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Delivery_Completed.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Delivery_Completed</fullName>
    <active>true</active>
    <label>API Del Delivery Completed</label>
</RecordType>