force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Enter_Milestone_Projected_Values.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Enter_Milestone_Projected_Values</fullName>
    <active>true</active>
    <label>API Del Enter Milestone Projected Values</label>
</RecordType>