force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Funding_Model_Task.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Funding_Model_Task</fullName>
    <active>true</active>
    <label>API Del Funding Model Task</label>
</RecordType>