force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Introductory_Email.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Introductory_Email</fullName>
    <active>true</active>
    <label>API Del Introductory Email</label>
</RecordType>