force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Live_Testing_Checkpoint_Task.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Live_Testing_Checkpoint_Task</fullName>
    <active>true</active>
    <label>API Del Live Testing Checkpoint Task</label>
</RecordType>