force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_NDA_CounterSign_Task.recordType-meta.xml
<RecordType>
    <fullName>API_Del_NDA_CounterSign_Task</fullName>
    <active>true</active>
    <label>API Del NDA CounterSign Task</label>
</RecordType>