force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_NDA_Developer_License_Signature_Task.recordType-meta.xml
<RecordType>
    <fullName>API_Del_NDA_Developer_License_Signature_Task</fullName>
    <active>true</active>
    <label>API Del NDA Developer License Signature Task</label>
</RecordType>