force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Reporting_Training_Session_Task.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Reporting_Training_Session_Task</fullName>
    <active>true</active>
    <label>API Del Reporting Training Session Task</label>
</RecordType>