force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Review_Milestones.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Review_Milestones</fullName>
    <active>true</active>
    <label>API Del Review Milestones</label>
</RecordType>