force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Schedule_Kick_off_Call.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Schedule_Kick_off_Call</fullName>
    <active>true</active>
    <label>API Del Schedule Kick-off Call</label>
</RecordType>