force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Send_DEMO_ECN_and_API_Credential.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Send_DEMO_ECN_and_API_Credential</fullName>
    <active>true</active>
    <label>API Del Send DEMO ECN and API Credential</label>
</RecordType>