force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Send_Live_ECN_and_API_Credentials.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Send_Live_ECN_and_API_Credentials</fullName>
    <active>true</active>
    <label>API Del Send Live ECN and API Credentials</label>
</RecordType>