force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_Send_Test_Scenario_Document.recordType-meta.xml
<RecordType>
    <fullName>API_Del_Send_Test_Scenario_Document</fullName>
    <active>true</active>
    <label>API Del Send Test Scenario Document</label>
</RecordType>