force-app/main/default/objects/Process_Task__c/recordTypes/API_Del_UAT_Testing_Completed.recordType-meta.xml
<RecordType>
    <fullName>API_Del_UAT_Testing_Completed</fullName>
    <active>true</active>
    <label>API Del UAT Testing Completed</label>
</RecordType>