force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Customer_Sign_off.recordType-meta.xml
<RecordType>
    <fullName>Contract_Customer_Sign_off</fullName>
    <active>true</active>
    <label>Contract Customer Sign-off</label>
</RecordType>