force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Deal_Arrangement.recordType-meta.xml
<RecordType>
    <fullName>Contract_Deal_Arrangement</fullName>
    <active>true</active>
    <label>Contract Deal Arrangement</label>
</RecordType>