force-app/main/default/objects/Process_Task__c/recordTypes/Contract_eNett_Sign_off.recordType-meta.xml
<RecordType>
    <fullName>Contract_eNett_Sign_off</fullName>
    <active>true</active>
    <label>Contract eNett Sign-off</label>
</RecordType>