force-app/main/default/objects/Process_Task__c/recordTypes/Contract_eNett_Sign_off_and_Upload.recordType-meta.xml
<RecordType>
    <fullName>Contract_eNett_Sign_off_and_Upload</fullName>
    <active>true</active>
    <label>Contract eNett Sign-off and Upload</label>
</RecordType>