force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Finance_Approval.recordType-meta.xml
<RecordType>
    <fullName>Contract_Finance_Approval</fullName>
    <active>true</active>
    <label>Contract Finance Approval</label>
</RecordType>