force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Legal_Approval.recordType-meta.xml
<RecordType>
    <fullName>Contract_Legal_Approval</fullName>
    <active>true</active>
    <label>Contract Legal Approval</label>
</RecordType>