force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Proposal_Negotiation.recordType-meta.xml
<RecordType>
    <fullName>Contract_Proposal_Negotiation</fullName>
    <active>true</active>
    <label>Contract Proposal/Negotiation</label>
</RecordType>