force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Proposal_Negotiation_Signoff.recordType-meta.xml
<RecordType>
    <fullName>Contract_Proposal_Negotiation_Signoff</fullName>
    <active>true</active>
    <label>Contract Proposal/Negotiation/Signoff</label>
</RecordType>