force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Sales_Approval.recordType-meta.xml
<RecordType>
    <fullName>Contract_Sales_Approval</fullName>
    <active>true</active>
    <label>Contract Sales Approval</label>
</RecordType>