force-app/main/default/objects/Process_Task__c/recordTypes/Contract_Upload_PDF_Copy_of_Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract_Upload_PDF_Copy_of_Contract</fullName>
    <active>true</active>
    <label>Contract Upload PDF Copy of Contract</label>
</RecordType>