force-app/main/default/objects/Process_Task__c/recordTypes/Del_Task_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Del_Task_Record_Type</fullName>
    <active>true</active>
    <label>Del Task Record Type</label>
</RecordType>