force-app/main/default/objects/Process_Task__c/recordTypes/Delivery_Estimated_Completion_Date.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Estimated_Completion_Date</fullName>
    <active>true</active>
    <label>Delivery Estimated Completion Date</label>
</RecordType>