force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_Client_Contact_task.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_Client_Contact_task</fullName>
    <active>true</active>
    <label>Desktop Del Client Contact task</label>
</RecordType>