force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_Complete_Training_Task.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_Complete_Training_Task</fullName>
    <active>true</active>
    <label>Desktop Del Complete Training Task</label>
</RecordType>