force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_Confirm_Completion.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_Confirm_Completion</fullName>
    <active>true</active>
    <label>Desktop Del Confirm Completion</label>
</RecordType>