force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_Confirm_Funding_Due_Date_Task_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_Confirm_Funding_Due_Date_Task_Record_Type</fullName>
    <active>true</active>
    <label>Desktop Del Confirm Funding Due Date Task Record Type</label>
</RecordType>