force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_Funding_Request.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_Funding_Request</fullName>
    <active>true</active>
    <label>Desktop Del Funding Request</label>
</RecordType>