force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_No_Funding_By_Due_Date.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_No_Funding_By_Due_Date</fullName>
    <active>true</active>
    <label>Desktop Del No Funding By Due Date</label>
</RecordType>