force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_Not_Transacting.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_Not_Transacting</fullName>
    <active>true</active>
    <label>Desktop Del Not Transacting</label>
</RecordType>