force-app/main/default/objects/Process_Task__c/recordTypes/Desktop_Del_Not_Transacting_8_Days.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Del_Not_Transacting_8_Days</fullName>
    <active>true</active>
    <label>Desktop Del Not Transacting 8 Days</label>
</RecordType>